# work

./: .gitignore  README.md  main.tf  outputs.tf  variables.tf
eks/: eks-cluster.tfvars  (+3 more)
live/: .gitignore  .gitlab-ci.yml  README.md  accounts.gitlab-ci.yml  changes.gitlab-ci.yml  child-pipeline-template.yml  common.gitlab-ci.yml  install_or_update_bespinctl.bash  pyproject.toml  root.hcl  skel.json  terragrunt.hcl
live/_doc/: iac_organization.md  iac_usage.md  new_aws_account_provisioning.md  setup.md
live/_envcommon/bootstrap/: bootstrap_terragrunter_in_new_account.hcl  terragrunter.hcl
live/_envcommon/platform/ecr/: team_repositories.hcl
live/_envcommon/platform/eks/: cluster-role.json  cluster.hcl  cluster_bootstrap.hcl  cluster_tenant.hcl  cluster_tooling.hcl  helm_and_kubernetes_providers.tf  k8s.hcl  node-group-role.json
live/_envcommon/platform/gitlab/: gitlab-fullchain-cert.crt  team_runner_fleet.hcl
live/_scripts/: action_changed_dirs.sh  check_plan.py  detect_changed_dirs.sh
live/audit/: account.hcl
live/camp/: account.hcl
live/data/: account.hcl
live/data/platform/automation/: automation.hcl
live/data/platform/staging/: staging.hcl
live/data/platform/test/: test.hcl
live/dev/: account.hcl  terragrunt.hcl
live/dev/iva/: terragrunt.hcl
live/dev/iva/s3/: terragrunt.hcl
live/dev/opr/: terragrunt.hcl
live/dev/opr/s3/: terragrunt.hcl
live/dev/platform/dev/: env.hcl
live/infra/: account.hcl
live/infra/camp/: team.hcl
live/infra/data-platform/: team.hcl
live/infra/data-platform/codeartifact-repositories/: terragrunt.hcl
live/infra/iva/: team.hcl
live/infra/iva/codeartifact-repositories/: terragrunt.hcl
live/infra/ocam/: team.hcl
live/infra/opr/: team.hcl
live/infra/pass/: team.hcl
live/infra/platform/access-keys-rotation/: terragrunt.hcl
live/infra/platform/acm/: terragrunt.hcl
live/infra/platform/admin/: admin.hcl
live/infra/platform/aws-conformance-packs/: terragrunt.hcl
live/infra/platform/cloud_city_roles/: terragrunt.hcl
live/infra/platform/ec2/: terragrunt.hcl
live/infra/platform/gitlab/: gitlab_config.hcl  terragrunt.hcl
live/infra/platform/vpn/: vpn_vars.hcl
live/infra/pqs/: team.hcl
live/infra/pqs/codeartifact-repositories/: terragrunt.hcl
live/infra/visas/: team.hcl
live/iva/: account.hcl  terragrunt.hcl
live/iva/platform/cloud_city_roles/: terragrunt.hcl
live/iva/platform/dev/: dev.hcl
live/logs/: account.hcl
live/logs/platform/cloudwatch_sharing/: main.tf  terragrunt.hcl
live/management/: account.hcl
live/management/camp/: team.hcl
live/management/data-platform/: team.hcl
live/management/iva/: team.hcl
live/management/ocam/: team.hcl
live/management/opr/: opr.hcl  team.hcl
live/management/pass/: team.hcl
live/management/platform/: platform.hcl  team.hcl
live/management/platform/service_control_policies/: terragrunt.hcl
live/management/platform/sns/: terragrunt.hcl
live/management/platform/sso/: README.md  sso.hcl
live/management/pqs/: team.hcl
live/management/visas/: team.hcl
live/modules/: .gitignore  .gitlab-ci.yml
live/modules/access-key-rotation/: README.md  main.tf  variables.tf
live/modules/codeartifact/identity_policy_for_repo_access/: README.md  main.tf  outputs.tf
live/modules/codeartifact/repositories/: outputs.tf  variables.tf
live/modules/elasticache/: logging.tf  token.tf
live/modules/helm/: README.md  main.tf  variables.tf
live/modules/rds/: README.md  main.tf  outputs.tf  variables.tf
live/modules/s3/: main.tf  policy.tf  variables.tf
live/modules/secret/: README.md  variables.tf
live/modules/sns/: README.md
live/modules/wiz/: outputs.tf  timestamp.json  wiz-custom-policy.tf
live/network/: account.hcl  terragrunt.hcl
live/network/platform/: platform.hcl
live/ocam/: account.hcl
live/ocam/platform/: team.hcl
live/opr/: account.hcl
live/opr/platform/: team.hcl
live/pass/: account.hcl
live/platform_sandbox/: account.hcl
live/pqs/: account.hcl
live/prod/: account.hcl
live/scripts/: detect-changed-dirs.sh
live/src/: readme.md
live/src/bespin_tools/: __init__.py  __main__.py
live/staging/: account.hcl  terragrunt.hcl
live/subordinateca/: account.hcl
live/test/: account.hcl  terragrunt.hcl
live/visas/: account.hcl
(+1109 files in other folders)
